--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
     <meta name="description" content=" ">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link crossorigin="anonymous" rel="stylesheet" href="https://cdn.jsdelivr.net/gh/twbs/bootstrap@v4/dist/css/bootstrap-reboot.css">
+    <link crossorigin="anonymous" rel="stylesheet" href="{{ "styles/bootstrap-reboot.css" | relative_url }}">
     
     <style>
         /*
