premier brouillon avec quelque chose de fonctionnel

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
 <html lang="{{ site.lang }}">
     {%- include head.html -%}
     <body>
+        <header>
+            <h1>L'Échappée Belle - Améthyste</h1>
+        </header>
         <main>
         {{ content }}
         </main>
